# paper-pptx

./: .gitignore  .readthedocs.yaml  API-PROPOSAL.md  ARCHITECTURE-NOTES.md  CONTRIBUTING.md  FIXTURE-REQUESTS.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  PAPER.md  PLAN-v0.1.md  README.md  README.rst  hardening_proposal.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: release.yaml  test.yml
agent_docs/: CONVENTIONS.md  PLAN-paper-pptx.md  PLAN-v0.11-paper-pptx.md
docs/: conf.py  index.rst
docs/api/: compose.rst  diff.rst  edit.rst  errors.rst  hf.rst  inspect.rst  package.rst  rebind.rst  scrub.rst  slides.rst  text.rst
docs/community/: support.rst  updates.rst
docs/user/: install.rst  paper-additions.rst
src/paper_pptx_doctor/: __init__.py  __main__.py
src/pptx/: __init__.py  _ownership.py  _transaction.py  _version.py  _zipguard.py  compose.py  diff.py  edit.py  errors.py  hf.py  inspect.py  package.py  presentation.py  rebind.py  scrub.py  slide.py  slideops.py  table.py
src/pptx/chart/: chart.py
src/pptx/enum/: text.py
src/pptx/opc/: package.py  serialized.py
src/pptx/oxml/: __init__.py  presentation.py  simpletypes.py  slide.py  table.py  text.py
src/pptx/shapes/: picture.py  shapetree.py
src/pptx/text/: bullet.py  text.py
tests/opc/: test_package.py
tests/paper/: RELEASE-CHECKLIST.md  __init__.py  clock.py  conftest.py  contract.py  corpus.py  fragval.py  idlists.py  lo.py  relint.py  test_autofit.py  test_bullets.py  test_chart_routing.py  test_contract_harness.py  test_deck_manifest.py  test_diff.py  test_distribution_doctor.py  test_edit_text.py  test_effective_inspect.py  test_fields_hf.py  test_fixture_corpus.py  test_hf_apply.py  test_image_replace.py  test_import.py  test_inspect_text.py  test_notes.py  test_package_io_hardening.py  test_package_kernel.py  test_pr0_stubs.py  test_rebind.py  test_scrub.py  test_shape_surgery.py  test_slide_ops.py  test_table_ops.py  test_transaction.py  test_walkthrough_pitchbook.py  test_walkthrough_qbr.py
tests/paper/_authoring/: build_fixtures.py  update_goldens.py
tests/paper/fixtures/: MANIFEST.sha256  README.md
tests/paper/fixtures/libreoffice_export/: lo_autofit_normal.json  lo_autofit_normal.pptx  lo_branded_template.json  lo_branded_template.pptx  lo_chart_notes.json  lo_chart_notes.pptx  lo_footers_applied.json  lo_footers_applied.pptx  lo_merged_tables.json  lo_merged_tables.pptx  lo_minimal_clean.json  lo_minimal_clean.pptx  lo_shared_media.json  lo_shared_media.pptx  lo_template_alpha.json  lo_template_alpha.pptx
tests/paper/fixtures/self_generated/: autofit_inherited.json  autofit_inherited.pptx  autofit_none.json  autofit_none.pptx  autofit_normal.json  autofit_normal.pptx  autofit_shape.json  autofit_shape.pptx  branded_template.json  branded_template.pptx  chart_notes.json  chart_notes.pptx  clrmap_remap.json  clrmap_remap.pptx  corrupt_dangling_sldid.json  corrupt_dangling_sldid.pptx  footers_applied.json  footers_applied.pptx  gauntlet.json  gauntlet.pptx  hf_flags.json  hf_flags.pptx  large_smoke.json  large_smoke.pptx  lineage_reorder.json  lineage_reorder.pptx  lineage_v1.json  lineage_v1.pptx  lineage_v2.json  lineage_v2.pptx  merged_tables.json  merged_tables.pptx  minimal_clean.json  minimal_clean.pptx  nested_groups.json  nested_groups.pptx  scrub_gauntlet.json  scrub_gauntlet.pptx  sections.json  sections.pptx  (+12 more)
tests/paper/goldens/: branded_template.inspect.json  clrmap_remap.inspect.json  gauntlet.manifest.json  gauntlet_slide1.inspect.json  import_beta_keep.import.json  lineage_v1_v2.diff.json  scrub_gauntlet.scrub.json  tables_in_group.manifest.json
