[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-pptx"
dynamic = ["version"]
authors = [
    {name = "Steve Canny", email = "stcanny@gmail.com"},
    {name = "Paper Instruments, Inc."},
]
maintainers = [{name = "Paper Instruments, Inc."}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "Pillow>=10.3.0",
    "XlsxWriter>=0.5.7",
    "lxml>=3.1.0",
    "typing_extensions>=4.9.0",
]
description = "Create, read, and update PowerPoint 2007+ (.pptx) files."
keywords = ["powerpoint", "ppt", "pptx", "openxml", "office"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
paper-pptx-doctor = "paper_pptx_doctor:main"

[tool.setuptools.dynamic]
version = {attr = "pptx._version.__paper_version__"}

[project.urls]
Changelog = "https://github.com/paper-instruments/paper-pptx/releases"
Documentation = "https://github.com/paper-instruments/paper-pptx"
Homepage = "https://github.com/paper-instruments/paper-pptx"
Issues = "https://github.com/paper-instruments/paper-pptx/issues"
Repository = "https://github.com/paper-instruments/paper-pptx"

[dependency-groups]
test = [
    "behave>=1.2.5",
    "pyparsing>=2.0.1",
    "pytest>=2.5",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
]
docs = [
    # -- documentation tooling runs on Python 3.10+; package runtime support remains 3.9+ --
    "Sphinx>=7.4.7,<8; python_version >= '3.10'",
    "Jinja2>=3.1.6,<4; python_version >= '3.10'",
    "MarkupSafe>=2.1.3,<4; python_version >= '3.10'",
    "alabaster>=0.7.14,<0.8; python_version >= '3.10'",
    "setuptools<81; python_version >= '3.10'",
]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    "build",
    "setuptools>=61.0.0",
    "twine",
]

[tool.black]
line-length = 100

[tool.pyright]
exclude = [
    "**/__pycache__",
    "**/.*"
]
include = [
    "src/pptx",
    "tests/"
]
ignore =  []
pythonPlatform = "All"
pythonVersion = "3.9"
reportImportCycles = false
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
stubPath = "./typings"
typeCheckingMode = "strict"
verboseOutput = true

[tool.pytest.ini_options]
filterwarnings = [
    # -- exit on any warning not explicitly ignored here --
    "error",
    # -- pytest-xdist plugin may warn about `looponfailroots` deprecation --
    "ignore::DeprecationWarning:xdist",
    # -- pytest complains when pytest-xdist is not installed --
    "ignore:Unknown config option. looponfailroots:pytest.PytestConfigWarning",
]

looponfailroots = [
    "src",
    "tests",
]
norecursedirs = [
    "docs",
    "*.egg-info",
    "features",
    ".git",
    "src",
    ".tox",
]
python_classes = [
    "Test",
    "Describe",
]
python_functions = [
    "test_",
    "it_",
    "they_",
    "but_",
    "and_",
]

[tool.ruff]
line-length = 100

# -- don't check these locations --
exclude = [
    # -- docs/ - documentation Python code is incidental --
    "docs",
    # -- ref/ is not source-code --
    "ref",
]

[tool.ruff.lint]
select = [
    "C4",       # -- flake8-comprehensions --
    "COM",      # -- flake8-commas --
    "E",        # -- pycodestyle errors --
    "F",        # -- pyflakes --
    "I",        # -- isort (imports) --
    "PLR0402",  # -- Name compared with itself like `foo == foo` --
    "PT",       # -- flake8-pytest-style --
    "SIM",      # -- flake8-simplify --
    "TCH001",   # -- detect typing-only imports not under `if TYPE_CHECKING` --
    "UP015",    # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",    # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",    # -- Use f-string instead of `.format()` call --
    "UP034",    # -- Avoid extraneous parentheses --
    "W",        # -- Warnings, including invalid escape-sequence --
]
ignore = [
    "COM812",   # -- over aggressively insists on trailing commas where not desireable --
    "PT001",    # -- wants empty parens on @pytest.fixture where not used (essentially always) --
    "PT005",    # -- flags mock fixtures with names intentionally matching private method name --
    "PT011",    # -- pytest.raises({exc}) too broad, use match param or more specific exception --
    "PT012",    # -- pytest.raises() block should contain a single simple statement --
    "SIM117",   # -- merge `with` statements for context managers that have same scope --
]

[tool.ruff.lint.isort]
known-first-party = ["pptx"]
